k/*
 * UnrealIRCd Changes File - (C) Carsten Munk 1999-2000 &
 *                               The UnrealIRCd Team
 *
 * $Id$
 * 
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 1, or (at your option)
 * any later version.
 * 
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 *
*/

*** BUGS ***
* /map has a few little display problems (fixable? sts: no not the hide ulines, already fixed)
* You can make the server flood off opers if you clone with > MAXCLIENTS
  fix: make a unknown connection clone defense:P
* -ex-2.routing.md.us.exchat.org- *** Notice -- Aieeee!!! Server terminating: Segmention fault (buf:
  :Methos PRIVMSG #exchat :for the * flag)

*** FIXED -- we think ***
- Potential problem with die/restart from 3.0(fix) ... peopl can not restart/kill servers even
  if they have the neseccery O:Lines -- it seems towork in 3.1

*** Unreal3.1 *** (state: beta third state)
- Moved REMOVE_ADVERTISE a little
- Fixed bug where you could /mode #test +L #test (link a channel to
  itself)
- Fixed a bug where a +L channel didn't have to be valid ex /mode #test
  +L blah would work, dangerous if 0 is used
- Fixed /map showing U:lines even if HIDE_ULINES was set oops :)
- Fixed a bug where opers couldn't walk through +l
- Fixed a bug where /mode #test +f *N:N was recognized the same as +f N:N
  (if *2:3 was set then /mode #chan +f 2:3 it wouldn't set, thought it was the same)