@@ -1,4 +1,4 @@
-k/*
+/*
  * UnrealIRCd Changes File - (C) Carsten Munk 1999-2000 &
  *                               The UnrealIRCd Team
  *
@@ -330,3 +330,4 @@ k/*
   will extend it so you can /shun +nick later
 - A little anti-0 fix in channel.c
 - Made MODE_X, MODE_I etc show mode change to user
+- Added channel mode +C to disallow channel CTCPs, /me (CTCP ACTION) is still allowed
